<resources>
    <string name="app_name">Instant Messenger for Mobile Device</string>

    <string name="hello_user">Projektowanie aplikacji na platformie Android</string>
    <string name="PREF">MY_SHARED</string>
    <string name="KEY">KEY</string>
    <string name="COMMENT">EXTRA_COMMENT</string>


    <string name="user_credentials">Unknown User</string>
    <string name="user_status">Unknown Status</string>
    <string name="chat_input_field">Type here to chat...</string>
    <string name="chat_sender">Chat sender message...</string>
    <string name="chat_receiver">Chat reciver message...</string>

    <string name="post_update_save_button">SAVE CHANGES </string>
    <string name="post_update_input_text">Typpe text here to add a description... </string>
    <string name="post_posts">Posts</string>
    <string name="post_create">Create new post</string>
    <string name="post_empty">You have not written anything</string>

    <string name="profile_edit_save_button">UPDATE PROFILE</string>
    <string name="profile_edit_button">Edit profile</string>
    <string name="profile_add_story_button">add story</string>
    <string name="profile_friends_header">Friends</string>
    <string name="profile_friends_show_all">Show all</string>
    <string name="profile_friends_amount">No friends</string>

    <string name="profile_user_name">User name or nickname</string>
    <string name="profile_user_location">Location</string>
    <string name="profile_user_phone">Phone Number</string>
    <string name="profile_user_biography">Biography</string>
    <string name="profile_user_education">Education</string>
    <string name="profile_user_email">Email address</string>
    <string name="profile_user_password">Password</string>
    <string name="profile_user_description">Description</string>

    <string name="reacted_toolbar">Reactions</string>

    <string name="friend_list_description">Chat with friends</string>

    <string name="login_page_title">Instant Messenger for Mobile Devices</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_register_header">Do not have an account?</string>

    <string name="main_menu_search_friends_button">Search friends</string>


    <string name="registration_profile_image_header">Upload profile picture</string>
    <string name="registration_login_header">Already have an account ?</string>
    <string name="registration_register">Register</string>

    <string name="update_update">Update</string>
    <string name="post_favourites">Favourites posts</string>
    <string name="time_example">10 hours ago</string>
    <string name="post_text">Witam was wszystkich bardzo serdecznie. Pozdrawiam serdecznie i pisze te bazgroly, bo nie mam lepszego pomyslu co tu napisac. </string>
    <string name="post_toolbar">POST</string>
    <string name="post_upload_file">Upload file</string>

    <string name="comment_text">Witaj nieznajomy i podziwiaj laki, lasy i dzikie zwierzeta.</string>
    <string name="comment_toolbar">Replies</string>
    <string name="comment_reply">Reply</string>
    <string name="comment_like">Like</string>

    <string name="search_users_header">Users</string>

    <string name="credits_message">Projektowanie aplikacji na platformie Android - Projekt</string>

    <string name="story_upload_file">Upload file</string>
    <string name="story_button_share">Share story</string>
    <string name="story_add_story">Add story</string>


    <string name="friend_empty_list">You do not have any friends</string>
    <string name="notifications_empty_list">There is no new notifications</string>
    <string name="friend_request_list_empty">No new requests</string>
    <string name="friend_request_accept">Confirm</string>
    <string name="friend_request_deny">Remove</string>

    <string name="number_example">10</string>

    <string name="menu_return_home"> Visit your profile</string>

    <string name="menu_chat_with_friends">chat with users</string>
    <string name="menu_post_feed">Post feed</string>
    <string name="menu_settings"> settings </string>
    <string name="menu_language"> language </string>
    <string name="menu_credits" > about project</string>
    <string name="menu_logout"> logout </string>

    <string name="post_menu_reactions">Reactions</string>
    <string name="post_menu_edit">Edit</string>

    <string name="code_friend_proposal_accepted">You are now friends</string>
    <string name="code_chat_empty_message">Please enter a message</string>
    <string name="code_profile_update_success">Profile updated successfully</string>
    <string name="code_loading">Loading...</string>
    <string name="code_account_is_created">Creating account...</string>
    <string name="code_confirm_exit">Press button again to confirm exit</string>
    <string name="code_empty_field">Fill all fields</string>
    <string name="code_empty_profile_picture">Upload your profile picture</string>
    <string name="code_empty_post_comment">Please type a description</string>
    <string name="code_empty_story_comment">Please type a description</string>

    <string name="title_activity_android_localize">AndroidLocalize</string>
    <string name="language_title">Language selection</string>
    <string name="language_selection">Change language of application</string>
    <string name="language_select_specified">Choose the language</string>
    <string-array name="languages">
        <item>Select language</item>
        <item>Polski</item>
        <item>English</item>
    </string-array>

</resources>
